--- a/index.css
+++ b/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Work+Sans:400,700');
-
 * {
 	box-sizing: border-box;
 	padding: 0;
@@ -7,15 +5,14 @@
 }
 
 body {
-	font-family: 'Work Sans', 'Avenir', Helvetica, Arial, sans-serif;
+	font-family: Helvetica, Arial, sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	color: #353839;
 }
 
-
 main {
-	max-width: 1080px;
+	max-width: 980px;
 	padding-left: 100px;
 	margin: 50px 0 0 0;
 }
@@ -36,7 +33,7 @@ footer > p {
 }
 
 a {
-	color: blue;
+	color: #2243b6;
 }
 
 section {
@@ -47,12 +44,13 @@ section {
 section > h1 {
 	font-size: 30px;
 	font-weight: 700;
+	margin: 0 0 30px 0;
 }
 
 section > h2 {
 	font-size: 20px;
 	font-weight: 700;
-	margin-top: 40px;
+	margin: 0 0 20px 0;
 }
 
 section > h1::before {
@@ -64,28 +62,67 @@ section > h1::before {
 p,
 section p {
 	max-width: 640px;
-	margin: 30px 0 30px 0;
+	margin: 0 0 20px 0;
+}
+
+p {
 	font-size: 17px;
 	line-height: 27px;
 }
 
 header {
-	position: fixed;
-	top: 20px;
-	right: 40px;
+	max-width: 640px;
+	margin: 50px 0 0 0;
+	padding: 0;
 }
 
-header > a {
-	padding: 4px 4px 4px 4px;
-	background: #ededed;
-	border-radius: 3px;
-	font-size: 14px;
-	text-decoration: unset;
-	text-transform: capitalize;
+header > address {
+	font-style: normal;
+	margin-bottom: 20px;
 }
 
-header > a:hover {
-	background: #ccc;
+header > address::before {
+	content: "AUTHORS: ";
+	font-style: normal;
+	font-size: 12px;
+	opacity: 0.7;
+}
+
+blockquote {
+	width: 640px;
+	border-top: 2px solid #353839;
+	border-bottom: 2px solid #353839;
+	padding-top: 20px;
+	margin: 0 0 20px 0;
+}
+
+blockquote > p {
+	font-size: 30px;
+	line-height: 45px;
+}
+
+blockquote > cite {
+	display: block;
+	text-align: right;
+	font-size: 17px;
+	line-height: 27px;
+	font-style: italic;
+}
+
+blockquote > cite::before {
+	content: "– "
+}
+
+header > h1 {
+	font-size: 100px;
+	line-height: 115px;
+	font-weight: bold;
+	margin: 0 0 50px 0;
+}
+
+header > p {
+	font-size: 20px;
+	line-height: 35px;
 }
 
 figure {
@@ -107,15 +144,25 @@ figcaption {
 	}
 }
 
+figure > div {
+	width: 640px;
+	overflow: scroll;
+	background-color: #ededed;
+}
+
 figure > img,
 figure > video {
 	display: block;
 	flex: 0 0 auto;
 	width: 640px;
 	height: auto;
-	border: 1px solid #ededed;
-	/* box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.23); */
+	/* border: 1px solid #ededed; */
+	box-shadow: 0px 0px 15px -5px rgba(0,0,0,0.23);
 	border-radius: 5px;
+}
+
+figure > p {
+	width: 640px; 
 }
 
 figcaption > h1 {
@@ -142,9 +189,9 @@ figcaption > p {
 table {
 	margin: 0;
 	padding: 10px 10px;
-	width: 640px;
 	text-align: left;
-	font-family: 'Roboto Mono', monospace;
+	/* font-family: monospace; */
+	font-family: inherit;
 	font-size: 12px;
 	background-color: #ededed;
 }
@@ -158,9 +205,11 @@ td,
 th {
 	padding: 5px 10px 5px 10px;
 	margin: 0;
+	vertical-align: top;
 }
 
-ul {
+ul,
+ol {
 	width: 640px;
 	margin: 20px 0 20px 0;
 	padding: 0;
@@ -175,7 +224,7 @@ li {
 }
 
 li > var {
-	font-family: 'Roboto Mono', monospace;
+	font-family: monospace;
 	font-style: normal;
 	font-weight: 700;
 	flex: 0 0 auto;
@@ -183,13 +232,29 @@ li > var {
 	display: inline-block;
 }
 
-li > span {
+li > p {
 	flex: 0 0 auto;
-	width: 100px;
+	width: 110px;
+	text-overflow: ellipsis;
+	white-space: wrap;
+	overflow: hidden;
 }
 
-li > p {
+li > p:last-child {
+	flex: 1 1 auto;
+	width: auto;
+}
+
+li > span {
+	flex: 0 0 auto;
+	width: 30px;
+}
+
+li > p,
+li > span,
+li > var {
 	font-size: 14px;
+	line-height: 21px;
 	margin: 0;
 	padding: 0;
 }
@@ -199,17 +264,22 @@ li > span:first-letter {
 }
 
 code {
-	font-family: 'Roboto Mono', monospace;
-	font-size: 13px;
-	background: #ededed;
-	border-radius: 2px;
+	font-family: monospace;
+	font-size: inherit;
+	/* background: #ededed; */
 	padding: 0;
 	color: #0a7e8c;
 }
 
-em {
+strong {
 	font-style: normal;
 	font-weight: 700;
+}
+
+q,
+em {
+	font-style: italic;
+	font-weight: normal;
 }
 
 p > img {
@@ -217,9 +287,24 @@ p > img {
 }
 
 pre {
-	font-family: 'Roboto Mono', monospace;
-	font-size: 12px;
+	background: #ededed;
+	font-family: monospace;
+	font-size: 14px;
 	width: 640px;
 	padding: 10px;
 	margin: 0;
+	overflow: scroll;
+	border-radius: 2px;
+}
+
+aside {
+	width: 220px;
+	float: right;
+}
+
+aside > p {
+	font-size: 14px;
+	line-height: 21px;
+	margin: 0;
+	padding: 0;
 }
