--- a/rapido.css
+++ b/rapido.css
@@ -38,13 +38,19 @@ body.rapido {
 
 .rapido section > h1 {
 	font-size: 30px;
-	font-weight: 700;
+	line-height: 45px;
+	width: 100%;
+	max-width: 640px;
+	font-weight: bold;
 	margin: 0 0 30px 0;
 }
 
 .rapido section > h2 {
 	font-size: 20px;
-	font-weight: 700;
+	line-height: 30px;
+	font-weight: bold;
+	width: 100%;
+	max-width: 640px;
 	margin: 0 0 20px 0;
 }
 
@@ -62,7 +68,7 @@ body.rapido {
 
 .rapido p,
 .rapido section p {
-	font-size: 17px;
+	font-size: 18px;
 	line-height: 27px;
 	max-width: 640px;
 	margin: 0 0 20px 0;
@@ -71,6 +77,7 @@ body.rapido {
 
 .rapido article > header {
 	max-width: 640px;
+	width: 100%;
 }
 
 .rapido article > header > h1 {
@@ -83,20 +90,20 @@ body.rapido {
 @media (max-width: 979px) {
 	.rapido article > header > h1 {
 		font-size: 40px;
-		line-height: 55px;
+		line-height: 60px;
 	}
 }
 
 @media (max-width: 499px) {
 	.rapido article > header > h1 {
 		font-size: 30px;
-		line-height: 40px;
+		line-height: 45px;
 	}
 }
 
 .rapido article > header > p {
-	font-size: 20px;
-	line-height: 35px;
+	font-size: 24px;
+	line-height: 36px;
 }
 
 .rapido article > header > address {
@@ -138,7 +145,7 @@ body.rapido {
 .rapido blockquote > cite {
 	display: block;
 	text-align: right;
-	font-size: 17px;
+	font-size: 18px;
 	line-height: 27px;
 	font-style: italic;
 }
@@ -204,7 +211,7 @@ body.rapido {
 .rapido figcaption > h1 {
 	display: inline;
 	font-size: 14px;
-	font-weight: 700;
+	font-weight: bold;
 	line-height: 21px;
 	padding: 0 5px 0 0;
 }
@@ -246,13 +253,14 @@ body.rapido {
 	padding: 10px 0 10px 5px;
 	border-bottom: 1px solid #ededed;
 	font-size: 14px;
+	line-height: 21px;
 	display: flex;
 }
 
 .rapido li > var {
 	font-family: monospace;
 	font-style: normal;
-	font-weight: 700;
+	font-weight: bold;
 	flex: 0 0 auto;
 	width: 100px;
 	display: inline-block;
@@ -291,12 +299,13 @@ body.rapido {
 .rapido code {
 	font-family: monospace;
 	font-size: inherit;
+	line-height: inherit;
 	color: #0a7e8c;
 }
 
 .rapido strong {
 	font-style: normal;
-	font-weight: 700;
+	font-weight: bold;
 }
 
 .rapido q,
@@ -313,6 +322,7 @@ body.rapido {
 	background: #ededed;
 	font-family: monospace;
 	font-size: 14px;
+	line-height: 21px;
 	width: 640px;
 	padding: 10px;
 	overflow: scroll;
