--- a/rapido.css
+++ b/rapido.css
@@ -90,7 +90,8 @@ body.rapido {
 .rapido div {
 	width: 100%;
 	max-width: 600px;
-	overflow: scroll;
+	overflow-y: hidden;
+	overflow-x: auto;
 }
 
 .rapido p > img {
@@ -104,7 +105,8 @@ body.rapido {
 	line-height: 21px;
 	width: 600px;
 	padding: 10px;
-	overflow: scroll;
+	overflow-y: hidden;
+	overflow-x: auto;
 	border-radius: 2px;
 }
 
@@ -186,7 +188,8 @@ body.rapido {
 .rapido figure > div {
 	width: 600px;
 	max-width: 100%;
-	overflow: scroll;
+	overflow-y: hidden;
+	overflow-x: auto;
 	background-color: #ededed;
 }
 
